dev/tests/cases/neg/35_unannotated_decl.tv
df main() -> void {
    set v = trim("  x  ");
    echo!(v);
}
